[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing1.png" type="Texture" id=1]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing2.png" type="Texture" id=2]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing3.png" type="Texture" id=3]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing4.png" type="Texture" id=4]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing6.png" type="Texture" id=5]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing8.png" type="Texture" id=6]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing5.png" type="Texture" id=7]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing7.png" type="Texture" id=8]
[ext_resource path="res://entities/entity_dark_being/entity_dark_being.gd" type="Script" id=9]
[ext_resource path="res://entities/boss_attacks/node_boss_attacks.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 12.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": false,
"name": "tp",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 48.0

[node name="entity_dark_being" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 9 )

[node name="node_boss_attacks" parent="." instance=ExtResource( 10 )]

[node name="col_dark_being" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="aspr_dark_being" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
frame = 2
playing = true

[node name="area_being_get" type="Area2D" parent="."]
collision_layer = 0

[node name="col_area_being_get" type="CollisionShape2D" parent="area_being_get"]
shape = SubResource( 3 )

[node name="node_timers" type="Node" parent="."]

[node name="timer_stage_one" type="Timer" parent="node_timers"]
wait_time = 4.0
one_shot = true

[node name="timer_stage_two" type="Timer" parent="node_timers"]
wait_time = 2.0
one_shot = true

[node name="timer_stage_three" type="Timer" parent="node_timers"]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="area_being_get" to="." method="_on_area_being_get_body_entered"]
